--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -2,6 +2,10 @@
   .second_block {
     width: 81%;
   }
+  .lines {
+    width: 7.38%;
+    height: 70.76%;
+  }
 }
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
   .second_block {
@@ -9,6 +13,10 @@
   }
   .phrase_inside_black-round {
     width: 28%;
+  }
+  .lines {
+    width: 7.38%;
+    height: 70.76%;
   }
 }
 @media only screen and (min-width: 1280px) and (max-width: 1366px) {
@@ -46,6 +54,10 @@
   }
   .phrase_inside_black-round {
     width: 28%;
+  }
+  .lines {
+    width: 7.38%;
+    height: 70.76%;
   }
 }
 @media only screen and (min-width: 1080px) and (max-width: 1280px) {
@@ -440,7 +452,7 @@
     font-size: 12px;
   }
   .start_stop_text {
-    margin-top: 6%;
+    margin-top: 5%;
   }
   .start {
     font-size: 18px;
@@ -462,7 +474,7 @@
     font-size: 18px;
   }
 }
-@media only screen and (min-width: 320px) and (max-width: 767px) {
+@media only screen and (min-width: 524px) and (max-width: 767px) {
   .ratio {
       padding-bottom: 530.31%;
   }
@@ -508,12 +520,154 @@
   }
   .seventh_block {
     width: 100%;
-    height: 64.77%;
+    height: 74.77%;
   }
   .footer {
     margin-top: -2px;
-    height: 3.15%;
+    height: 6.15%;
   }
+  .hole_1 {
+    height: 60.39%;
+  }
+  .hole_2 {
+    height: 65.89%;
+  }
+  .hole_3 {
+    height: 67.04%;
+  }
+  .hole_4 {
+    height: 55.17%;
+  }
+  .fourth_section {
+    height: 25.50%;
+  }
+  .robot_phrase {
+    padding-top: 5.36%;
+    font-size: 22px;
+  }
+  .arrow_left {
+    margin-top: 22.82%;
+  }
+  .arrow_right {
+    margin-top: 22.82%;
+  }
+  .pannel_text {
+    font-size: 18px;
+  }
+  .seconds {
+    margin-top: 10%;
+    font-size: 28px;
+  }
+  .figures {
+    margin-top: 10%;
+    font-size: 28px;
+  }
+  .logo {
+    width: 50.48%;
+    height: 61.77%;
+    margin-left: 4%;
+    margin-top: 2.36%;
+  }
+  .close_hole_phrase {
+    position: absolute;
+    height: 63px;
+    padding-top: 22%;
+    padding-left: 4%;
+    font-size: 18px;
+  }
+  .robot {
+    margin: 5% auto;
+    width: 62.82%;
+    height: 90.59%;
+  }
+  .first_round_group {
+    width: 85.32%;
+    height: 88.89%;
+    margin-top: 8.38%;
+    margin-left: 8.27%;
+  }
+  .second_round_group {
+    width: 87.32%;
+    height: 88.89%;
+    margin-top: 12.07%;
+    margin-left: 6.86%;
+  }
+  .black_round {
+    width: 65.81%;
+    height: 67.29%;
+    margin-top: 20%;
+    margin-left: 18.02%;
+  }
+  .line {
+    width: 3%;
+    height: 1.34%;
+    margin-top: 38.5%;
+    margin-left: 29%;
+  }
+  .phrase_inside_black-round {
+    margin-top: 37%;
+    margin-left: 32.6%;
+    width: 40%;
+    height: 150px;
+    font-size: 18px;
+  }
+  .hole_1 {
+    width: 76.07%;
+    height: 75.39%;
+    margin-left: 10.96%;
+    margin-top: 17%;
+  }
+  .hole_2 {
+    width: 80.59%;
+    height: 75.89%;
+    margin-left: 8.96%;
+    margin-top: 17%;
+    display: none;
+  }
+  .hole_3 {
+    width: 80.59%;
+    height: 75.89%;
+    margin-left: 8.96%;
+    margin-top: 17%;
+    display: none;
+  }
+  .hole_4 {
+    width: 80.59%;
+    height: 75.89%;
+    margin-left: 8.96%;
+    margin-top: 17%;
+    display: none;
+  }
+  .hole_1_nodisplay {
+
+  }
+  .choose_hole_phrase {
+    font-size: 22px;
+  }
+  .start_stop_text {
+    margin-top: 5%;
+  }
+  .start {
+    font-size: 18px;
+  }
+  .stop {
+    font-size: 18px;
+  }
+  .lines {
+    width: 6.38%;
+  }
+  .line_input {
+    width: 6.42%;
+  }
+  .line_velvet {
+    width: 1.43%;
+  }
+  .footer_phrase {
+    margin: 2.9% auto;
+    font-size: 18px;
+  }
+}
+@media only screen and (min-width: 320px) and (max-width: 524px) {
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 767px) {
 
