--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -508,7 +508,7 @@
     height: 79.7%;
   }
   .third_section {
-    height: 19.56%;
+    height: 20.56%;
   }
   .fourth_section {
     width: 100%;
@@ -516,30 +516,15 @@
   }
   .sixth_block {
     width: 100%;
-    height: 35.23%;
+    height: 32.5%;
   }
   .seventh_block {
     width: 100%;
-    height: 74.77%;
+    height: 67.5%;
   }
   .footer {
     margin-top: -2px;
-    height: 6.15%;
-  }
-  .hole_1 {
-    height: 60.39%;
-  }
-  .hole_2 {
-    height: 65.89%;
-  }
-  .hole_3 {
-    height: 67.04%;
-  }
-  .hole_4 {
-    height: 55.17%;
-  }
-  .fourth_section {
-    height: 25.50%;
+    height: 2.15%;
   }
   .robot_phrase {
     padding-top: 5.36%;
@@ -601,6 +586,299 @@
   .line {
     width: 3%;
     height: 1.34%;
+    margin-top: 41.5%;
+    margin-left: 29%;
+  }
+  .phrase_inside_black-round {
+    margin-top: 40%;
+    margin-left: 32.6%;
+    width: 40%;
+    height: 150px;
+    font-size: 14px;
+  }
+  .hole_1 {
+    position: absolute;
+    width: 76.07%;
+    height: 15.39%;
+    margin-left: 10.96%;
+    margin-top: 20%;
+  }
+  .hole_2 {
+    position: absolute;
+    width: 80.59%;
+    height: 15.89%;
+    margin-left: 8.96%;
+    margin-top: 20%;
+  }
+  .hole_3 {
+    position: absolute;
+    width: 80.59%;
+    height: 15.89%;
+    margin-left: 8.96%;
+    margin-top: 20%;
+  }
+  .hole_4 {
+    position: absolute;
+    width: 80.59%;
+    height: 15.89%;
+    margin-left: 8.96%;
+    margin-top: 20%;
+  }
+  .union_left {
+    display: block;
+  }
+  .union_right {
+    display: block;
+  }
+  .choose_hole_phrase {
+    font-size: 22px;
+    width: 95%;
+  }
+  .footer_phrase {
+    margin: 4.6% auto;
+    font-size: 14px;
+  }
+  .effects {
+    margin-left: 5.49%;
+    margin-top: 4.92%;
+  }
+  .timer {
+    margin-left: 38.56%;
+    margin-top: 4.92%;
+  }
+  .size {
+    margin-top: 23.84%;
+    margin-left: 38.56%;
+  }
+  .form {
+    margin-left: 5.49%;
+    margin-top: 33.92%;
+  }
+  .button-effects_1 {
+    margin-left: 5.49%;
+    margin-top: 10.94%;
+  }
+  .button-effects_2 {
+    margin-left: 15.49%;
+    margin-top: 10.94%;
+  }
+  .button-effects_3 {
+    margin-left: 25.49%;
+    margin-top: 10.94%;
+  }
+  .button-effects_4 {
+    margin-left: 5.49%;
+    margin-top: 21.94%;
+  }
+  .button-effects_5 {
+    margin-left: 15.49%;
+    margin-top: 21.94%;
+  }
+  .button-effects_6 {
+    margin-left: 25.49%;
+    margin-top: 21.94%;
+  }
+  .seconds {
+    margin-left: 30.03%;
+    margin-top: 5.77%;
+    font-size: 24px;
+  }
+  .plus {
+    width: 12.5%;
+    height: 35.1%;
+    margin-left: 85.19%;
+    margin-top: 3.82%;
+  }
+  .minus {
+    width: 12.5%;
+    height: 8.67%;
+    margin-left: 84.19%;
+    margin-top: 21.82%;
+  }
+  .size_block {
+    margin-top: 29.84%;
+    margin-left: 38.56%;
+  }
+  .timer_block {
+    margin-left: 38.56%;
+  }
+  .figures {
+    margin-top: 6.77%;
+    font-size: 24px;
+  }
+  .start {
+    font-size: 18px;
+    width: 28.33%;
+    height: 18.17%;
+    margin-left: 70.49%;
+    margin-top: 11.94%;
+    border: 1px solid #FFFFFF;
+  }
+  .start_stop_text {
+    margin-top: 8%;
+  }
+  .stop {
+    font-size: 18px;
+    width: 28.33%;
+    height: 18.17%;
+    margin-left: 70.49%;
+    margin-top: 29.84%;
+    border: 1px solid #FFFFFF;
+  }
+  .lines {
+    display: none;
+  }
+  .round {
+    width: 5.55%;
+    height: 10.26%;
+  }
+  .round_1 {
+    margin-left: 5.49%;
+    margin-top: 41%;
+  }
+  .round_2 {
+    margin-left: 16.49%;
+    margin-top: 41%;
+  }
+  .round_3 {
+    margin-left: 27.49%;
+    margin-top: 41%;
+  }
+  .round_4 {
+    margin-left: 38.49%;
+    margin-top: 41%;
+  }
+  .round_5 {
+    margin-left: 49.49%;
+    margin-top: 41%;
+  }
+  .round_6 {
+    margin-left: 60.49%;
+    margin-top: 41%;
+  }
+  .line_velvet {
+    width: 1.43%;
+  }
+  .stop:hover {
+    border: 1px solid #CBEE4C;
+  }
+  .start:hover {
+    border: 1px solid #CBEE4C;
+    background-color: #CBEE4C;
+  }
+}
+@media only screen and (min-width: 320px) and (max-width: 524px) {
+  .ratio {
+      padding-bottom: 530.31%;
+  }
+  .first_page_left {
+    width: 100%;
+    height: 22%;
+  }
+  .first_page_right{
+    width: 100%;
+    height: 28.21%;
+  }
+  .first_section {
+    height: 18.97%;
+  }
+  .first_block {
+    width: 23.33%;
+  }
+  .second_block {
+    width: 76.80%;
+  }
+  .second_section {
+    height: 81.03%;
+  }
+  .third_block {
+    width: 100%;
+  }
+  .fourth_block {
+    height: 20.3%;
+  }
+  .fifth_block {
+    height: 79.7%;
+  }
+  .third_section {
+    height: 20.56%;
+  }
+  .fourth_section {
+    width: 100%;
+    height: 28.26%;
+  }
+  .sixth_block {
+    width: 100%;
+    height: 32.5%;
+  }
+  .seventh_block {
+    width: 100%;
+    height: 67.5%;
+  }
+  .footer {
+    margin-top: -2px;
+    height: 2.15%;
+  }
+  .robot_phrase {
+    padding-top: 5.36%;
+    font-size: 14px;
+  }
+  .arrow_left {
+    margin-top: 22.82%;
+  }
+  .arrow_right {
+    margin-top: 22.82%;
+  }
+  .pannel_text {
+    font-size: 14px;
+  }
+  .seconds {
+    margin-top: 10%;
+    font-size: 28px;
+  }
+  .figures {
+    margin-top: 10%;
+    font-size: 28px;
+  }
+  .logo {
+    width: 50.48%;
+    height: 61.77%;
+    margin-left: 4%;
+    margin-top: 2.36%;
+  }
+  .close_hole_phrase {
+    position: absolute;
+    height: 63px;
+    padding-top: 22%;
+    padding-left: 4%;
+    font-size: 14px;
+  }
+  .robot {
+    margin: 5% auto;
+    width: 62.82%;
+    height: 90.59%;
+  }
+  .first_round_group {
+    width: 85.32%;
+    height: 88.89%;
+    margin-top: 8.38%;
+    margin-left: 8.27%;
+  }
+  .second_round_group {
+    width: 87.32%;
+    height: 88.89%;
+    margin-top: 12.07%;
+    margin-left: 6.86%;
+  }
+  .black_round {
+    width: 65.81%;
+    height: 67.29%;
+    margin-top: 20%;
+    margin-left: 18.02%;
+  }
+  .line {
+    width: 3%;
+    height: 1.34%;
     margin-top: 38.5%;
     margin-left: 29%;
   }
@@ -609,66 +887,180 @@
     margin-left: 32.6%;
     width: 40%;
     height: 150px;
-    font-size: 18px;
+    font-size: 11px;
   }
   .hole_1 {
+    position: absolute;
     width: 76.07%;
-    height: 75.39%;
+    height: 15.39%;
     margin-left: 10.96%;
-    margin-top: 17%;
+    margin-top: 20%;
   }
   .hole_2 {
+    position: absolute;
     width: 80.59%;
-    height: 75.89%;
+    height: 15.89%;
     margin-left: 8.96%;
-    margin-top: 17%;
-    display: none;
+    margin-top: 20%;
   }
   .hole_3 {
+    position: absolute;
     width: 80.59%;
-    height: 75.89%;
+    height: 15.89%;
     margin-left: 8.96%;
-    margin-top: 17%;
-    display: none;
+    margin-top: 20%;
   }
   .hole_4 {
+    position: absolute;
     width: 80.59%;
-    height: 75.89%;
+    height: 15.89%;
     margin-left: 8.96%;
-    margin-top: 17%;
-    display: none;
+    margin-top: 20%;
   }
-  .hole_1_nodisplay {
-
+  .union_left {
+    display: block;
+  }
+  .union_right {
+    display: block;
   }
   .choose_hole_phrase {
-    font-size: 22px;
+    font-size: 18px;
+    width: 95%;
   }
-  .start_stop_text {
-    margin-top: 5%;
+  .footer_phrase {
+    margin: 4.6% auto;
+    font-size: 9px;
+  }
+  .effects {
+    margin-left: 5.49%;
+    margin-top: 4.92%;
+  }
+  .timer {
+    margin-left: 38.56%;
+    margin-top: 4.92%;
+  }
+  .size {
+    margin-top: 23.84%;
+    margin-left: 38.56%;
+  }
+  .form {
+    margin-left: 5.49%;
+    margin-top: 33.92%;
+  }
+  .button-effects_1 {
+    margin-left: 5.49%;
+    margin-top: 10.94%;
+  }
+  .button-effects_2 {
+    margin-left: 15.49%;
+    margin-top: 10.94%;
+  }
+  .button-effects_3 {
+    margin-left: 25.49%;
+    margin-top: 10.94%;
+  }
+  .button-effects_4 {
+    margin-left: 5.49%;
+    margin-top: 21.94%;
+  }
+  .button-effects_5 {
+    margin-left: 15.49%;
+    margin-top: 21.94%;
+  }
+  .button-effects_6 {
+    margin-left: 25.49%;
+    margin-top: 21.94%;
+  }
+  .seconds {
+    margin-left: 30.03%;
+    margin-top: 3.77%;
+    font-size: 18px;
+  }
+  .plus {
+    width: 12.5%;
+    height: 35.1%;
+    margin-left: 85.19%;
+    margin-top: 3.82%;
+  }
+  .minus {
+    width: 12.5%;
+    height: 8.67%;
+    margin-left: 84.19%;
+    margin-top: 21.82%;
+  }
+  .size_block {
+    margin-top: 29.84%;
+    margin-left: 38.56%;
+    border-radius: 10px;
+  }
+  .timer_block {
+    margin-left: 38.56%;
+    border-radius: 10px;
+  }
+  .figures {
+    margin-top: 4.77%;
+    font-size: 18px;
   }
   .start {
-    font-size: 18px;
+    font-size: 14px;
+    width: 28.33%;
+    height: 18.17%;
+    margin-left: 70.49%;
+    margin-top: 11.94%;
+    border: 1px solid #FFFFFF;
+    border-radius: 10px;
+  }
+  .start_stop_text {
+    margin-top: 7%;
   }
   .stop {
-    font-size: 18px;
+    font-size: 14px;
+    width: 28.33%;
+    height: 18.17%;
+    margin-left: 70.49%;
+    margin-top: 29.84%;
+    border: 1px solid #FFFFFF;
+    border-radius: 10px;
   }
   .lines {
-    width: 6.38%;
+    display: none;
   }
-  .line_input {
-    width: 6.42%;
+  .round {
+    width: 5.55%;
+    height: 10.26%;
+  }
+  .round_1 {
+    margin-left: 5.49%;
+    margin-top: 41%;
+  }
+  .round_2 {
+    margin-left: 16.49%;
+    margin-top: 41%;
+  }
+  .round_3 {
+    margin-left: 27.49%;
+    margin-top: 41%;
+  }
+  .round_4 {
+    margin-left: 38.49%;
+    margin-top: 41%;
+  }
+  .round_5 {
+    margin-left: 49.49%;
+    margin-top: 41%;
+  }
+  .round_6 {
+    margin-left: 60.49%;
+    margin-top: 41%;
   }
   .line_velvet {
     width: 1.43%;
   }
-  .footer_phrase {
-    margin: 2.9% auto;
-    font-size: 18px;
+  .stop:hover {
+    border: 1px solid #CBEE4C;
   }
-}
-@media only screen and (min-width: 320px) and (max-width: 524px) {
-}
-@media only screen and (min-device-width: 320px) and (max-device-width: 767px) {
-
+  .start:hover {
+    border: 1px solid #CBEE4C;
+    background-color: #CBEE4C;
+  }
 }
