--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -217,6 +217,21 @@ body {
   font-size: 18px;
   line-height: 140%;
   color: #000000;
+  list-style-type: none;
+}
+.slide {
+    opacity: 0;
+    z-index: 1;
+
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+
+.showing {
+    opacity: 1;
+    z-index: 2;
 }
 .arrow_left {
   position: absolute;
@@ -681,4 +696,54 @@ body {
 .start:hover {
   border: 3px solid #CBEE4C;
   background-color: #CBEE4C;
+}
+
+
+
+
+
+
+
+.tileContainer{
+  border:10px solid black;
+  display:inline-block;
+  position:relative;
+  width:1024px;
+  height:768px;
+  overflow:hidden;
+  box-sizing:border-box;
+}
+
+
+.tile{
+  position:relative;
+  vertical-align:top;
+  display:inline-block;
+  border-right:1px solid rgba(0, 0, 0, 0.5);
+  border-bottom:1px solid rgba(0, 0, 0, 0.5);
+  box-sizing:border-box;
+}
+
+.tile:after{
+  content:"";
+  background-color:#cc1c32;
+  width:6px;
+  height:6px;
+  position:absolute;
+  top:100%;
+  right:0px;
+  transform:translate(50%, -50%);
+  z-index:2;
+  line-height:1;
+}
+
+/*-- no grid --*/
+
+.noGrid .tile{
+  border-right:0px solid rgba(0, 0, 0, 0.5);
+  border-bottom:0px solid rgba(0, 0, 0, 0.5);
+}
+
+.noGrid .tile:after{
+  content:none;
 }
